Fix spacing (padding)

--- a/src/app/shared/components/slide/slide.scss
+++ b/src/app/shared/components/slide/slide.scss
@@ -77,9 +77,15 @@
     background: var(--slides-background-light);
   }
 
+  ::ng-deep ul {
+    margin-block-start: calc(1.5 * var(--unit)) !important;
+    margin-block-end: calc(1.5 * var(--unit)) !important;
+    padding-inline-start: calc(3.5 * var(--unit)) !important;
+  }
+
   ::ng-deep li {
-    margin-block-start: 0.5em !important;
-    margin-block-end: 0.5em !important;
+    margin-block-start: calc(0.5 * var(--unit)) !important;
+    margin-block-end: calc(0.5 * var(--unit)) !important;
   }
 
   ::ng-deep code.hljs {
